<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">资产管理系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_please_login">尚未登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_poll_fragment">PollFragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">数据中心资产管理系统</string>
    <string name="please_login_user_name_hint">请输入用户名</string>
    <string name="please_password_hint">请输入密码</string>
    <string name="rember_password">记住密码</string>
    <string name="login_button_text">登陆</string>
    <string name="login_obtain_profile">获取资产基础信息...</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="login_loging">登录中...</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">无法回复</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="login_username">用户名:</string>
    <string name="not_have_data_hint">暂无信息</string>
    <string name="user_displayname">别名:</string>
    <string name="user_personid">人员名称:</string>
    <string name="user_password">密码:</string>

    <!-- 登陆 -->
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>

    <!--数据是否下载-->
    <string name="is_down">data_is_down</string>

    <!--设置Ip-->
    <string name="set_ip">set_ip</string>




    <!-- 设置 -->
    <string name="title_activity_settings">设置</string>
    <string name="settings_nomal">常规设置</string>
    <string name="settings_more">其他</string>
    <string name="settings_use_https">使用HTTPS</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="settings_noimage_nowifi">无图模式</string>
    <string name="settings_noimage_nowifi_summary">2G/3G网络下不显示图片</string>
    <string name="settings_check_update">检查更新</string>
    <string name="settings_check_update_summary">检测是否有新版本</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_feedback_summary">去软件市场上给个好评</string>
    <string name="settings_about">关于我们</string>
    <string name="settings_about_summary">关于我们、版权信息</string>
    <string name="settings_aboutme_format">%1$s%2$s%3$sby %4$s</string>
    <string name="poll_text">我的工作台</string>
    <string name="title_activity_poll_list">PollListActivity</string>
    <string name="poll_list_text">巡检列表</string>
    <string name="task_text">任务</string>
    <string name="poll_time">时间</string>
    <string name="poll_status">状态</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="item_num_text">编码:</string>
    <string name="item_location_text">位置:</string>
    <string name="asset_no_text">名称:</string>
    <string name="title_activity_task_scann">TaskScannActivity</string>
    <string name="start_scann">扫 描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="scann_results">相关设备</string>
    <string name="MakeSurePDAexitRfid">没有找到Rfid超高频通信模块，请确定当前PDA内存在该模块</string>
    <string name="rfid_num">资产编码:</string>

    <!-- 巡检回单 -->
    <string name="title_activity_task_result">巡检回单</string>
    <string name="asset_task_id">任务单号:</string>
    <string name="asset_device_text">设备编号:</string>
    <string name="asset_inspect_time">巡检时间:</string>
    <string name="asset_inspectuser_id">巡检人:</string>
    <string name="task_problem_text">问题标题:</string>
    <string name="task_problem_desc">问题描述:</string>
    <string name="asset_image">附件:</string>
    <string name="submit_button">提交</string>
    <string name="loginout_text">正在退出...</string>
    <string name="asset_details_text">详情</string>
    <string name="asset_reply_text">回单</string>
    <!-- 资产详情 -->
    <string name="title_activity_asset__details_">资产详情</string>
    <string name="asset_detail_rfid">RFID:</string>
    <string name="asset_region_text">园区:</string>
    <string name="asset_site_text">大楼:</string>
    <string name="asset_floor_text">楼层:</string>
    <string name="asset_room_text">区域名称:</string>
    <string name="asset_door_text">门:</string>
    <string name="asset_submitter_text">配置项创建人:</string>
    <string name="asset_create_date_text">配置项创建时间:</string>
    <string name="asset_last_modified_by_text">最后更新人:</string>
    <string name="asset_last_modifiedp_date_text">最后更新时间:</string>
    <string name="asset_last_auditor_text">最新审计人:</string>
    <string name="asset_last_audit_date_text">最新审计时间:</string>
    <string name="asset_audit_status_text">审核状态:</string>
    <string name="asset_ci_name_text">配置项名称:</string>
    <string name="asset_ci_tag_text">CI分类:</string>
    <string name="asset_ci_id_text">配置项编码:</string>
    <string name="asset_ci_short_desc_text">配置项描述:</string>
    <string name="asset_ci_asset_lc_status_text">生产状态:</string>
    <string name="asset_ci_company_text">所属单位:</string>
    <string name="asset_ci_department_text">所属部门:</string>
    <string name="asset_owner_name_text">配置项责任人:</string>
    <string name="asset_supplier_name_text">设备提供商:</string>
    <string name="asset_service_provider_text">售后服务商:</string>
    <string name="have_not_data">暂无信息</string>

    <!--数据下载-->

    <string name="title_activity_download_base_data">数据下载</string>
    <string name="loading_hint_text">努力加载中...</string>

</resources>
